--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SiteMonitor.Tests\packages.config" />
   <repository path="..\SiteMonitor\packages.config" />
+  <repository path="..\WebMonitor.API\packages.config" />
 </repositories>
