--- a/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
+++ b/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
@@ -66,9 +66,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GoogleSearchRunner.cs" />
+    <Compile Include="SampleRunners\FixedTimeRunner.cs" />
+    <Compile Include="SampleRunners\GoogleSearchRunner.cs" />
     <Compile Include="MonitorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleRunners\RandomTimeRunner.cs" />
     <Compile Include="Reporting\AssetsTest.cs" />
     <Compile Include="Runner\BaseRunnerTest.cs" />
   </ItemGroup>
