--- a/src/SiteMonitor/SiteMonitor.csproj
+++ b/src/SiteMonitor/SiteMonitor.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB\Database.cs" />
+    <Compile Include="Interval.cs" />
     <Compile Include="Monitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\RunResultsForRunner.cs" />
