--- a/src/SiteMonitor.Core/packages.config
+++ b/src/SiteMonitor.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="Dapper" version="1.9" />
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="IISExpress.Automation" version="0.1.1" />
+  <package id="log4net" version="2.0.0" />
   <package id="Newtonsoft.Json" version="4.5.1" />
   <package id="Selenium.Support" version="2.23.0" />
   <package id="Selenium.WebDriver" version="2.23.0" />
