--- a/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
+++ b/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
@@ -71,7 +71,7 @@
     <Compile Include="MonitorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleRunners\RandomTimeRunner.cs" />
-    <Compile Include="Runner\BaseRunnerTest.cs" />
+    <Compile Include="BaseRunnerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
