--- a/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
+++ b/src/SiteMonitor.Tests/SiteMonitor.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="BaseRunnerTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
