--- a/src/SiteMonitor/SiteMonitor.csproj
+++ b/src/SiteMonitor/SiteMonitor.csproj
@@ -35,6 +35,10 @@
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.2.41\lib\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="IISExpress.Automation, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\IISExpress.Automation.0.1.1\lib\net40\IISExpress.Automation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
