--- a/src/SiteMonitor.Core/packages.config
+++ b/src/SiteMonitor.Core/packages.config
@@ -5,8 +5,12 @@
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="IISExpress.Automation" version="0.1.1" />
   <package id="log4net" version="2.0.0" />
-  <package id="Newtonsoft.Json" version="4.5.1" />
-  <package id="Selenium.Support" version="2.23.0" />
-  <package id="Selenium.WebDriver" version="2.23.0" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20505.0" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20505.0" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20505.0" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" />
+  <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="Selenium.Support" version="2.25.1" />
+  <package id="Selenium.WebDriver" version="2.25.1" />
   <package id="System.Data.SQLite" version="1.0.81.0" />
 </packages>
