--- a/src/SiteMonitor/App.config
+++ b/src/SiteMonitor/App.config
@@ -1,40 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    </configSections>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <log4net>
-        <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-            <target value="Console.Error" />
-            <mapping>
-                <level value="FATAL" />
-                <foreColor value="Red" />
-                <backColor value="White" />
-            </mapping>
-            <mapping>
-                <level value="ERROR" />
-                <foreColor value="Red, HighIntensity" />
-            </mapping>
-            <mapping>
-                <level value="WARN" />
-                <foreColor value="Yellow" />
-            </mapping>
-            <mapping>
-                <level value="INFO" />
-                <foreColor value="Cyan" />
-            </mapping>
-            <mapping>
-                <level value="DEBUG" />
-                <foreColor value="Green" />
-            </mapping>
-            <layout type="log4net.Layout.SimpleLayout" />
-        </appender>
-        <logger name="SiteMonitor">
-            <level value="ALL" />
-            <appender-ref ref="ColoredConsoleAppender" />
-        </logger>
-    </log4net>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <appSettings>
+    <add key="DatabasePath" value="C:\temp\WebMonitor.sqlite" />
+  </appSettings>
+  <log4net>
+    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <target value="Console.Error" />
+      <mapping>
+        <level value="FATAL" />
+        <foreColor value="Red" />
+        <backColor value="White" />
+      </mapping>
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="Red, HighIntensity" />
+      </mapping>
+      <mapping>
+        <level value="WARN" />
+        <foreColor value="Yellow" />
+      </mapping>
+      <mapping>
+        <level value="INFO" />
+        <foreColor value="Cyan" />
+      </mapping>
+      <mapping>
+        <level value="DEBUG" />
+        <foreColor value="Green" />
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level- %message%newline" />
+      </layout>
+    </appender>
+    <logger name="SiteMonitor">
+      <level value="ALL" />
+      <appender-ref ref="ColoredConsoleAppender" />
+    </logger>
+  </log4net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="WebDriver" publicKeyToken="1c2bd1631853048f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.25.1.0" newVersion="2.25.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
