--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SiteMonitor.Core\packages.config" />
   <repository path="..\SiteMonitor.Tests\packages.config" />
   <repository path="..\SiteMonitor.UI\packages.config" />
   <repository path="..\SiteMonitor\packages.config" />
